changed a bit of SLU loc

--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -2051,11 +2051,12 @@ SLU_federal_democracy;Slavic Federal Republic;;;;;;;;;;;;;x
 SLU_hms_government;All-Slavic Commonwealth;;;;;;;;;;;;;x
 SLU_hms_government2;All-Slavic Commonwealth;;;;;;;;;;;;;x
 SLU_absolute_monarchy2;Tsardom of All-Slavic Peoples;;;;;;;;;;;;;x
-SLU_prussian_constitutionalism2;Union Empire of All-Slavic Peoples;;;;;;;;;;;;;x
+SLU_prussian_constitutionalism2;United Empire of All-Slavic Peoples;;;;;;;;;;;;;x
 SLU_parliamentary_republic;Slavic Federal Republic;;;;;;;;;;;;;x
 SLU_proletarian_dictatorship;Union of Slavic Socialist Republics;;;;;;;;;;;;;x
 SLU_prussian_constitutionalism;Union Empire of All-Slavic Peoples;;;;;;;;;;;;;x
 SLU_bourgeois_dictatorship;All-Slavic Federative Union;;;;;;;;;;;;;x
+SLU_trade_unions_congress;Confederation of Slavic Soviets;;;;;;;;;;;;;x
 SLU_presidential_dictatorship;Slavic Union;;;;;;;;;;;;;x
 SLS_colonial_company;Schlesien;;;;;;;;;;;;;x
 SLS_dominion;Schlesien;;;;;;;;;;;;;x
