added kanto history

--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -504,6 +504,52 @@ JG0;Kakegawa;;;;;;;;;;;;;x
 JG1;Sagara;;;;;;;;;;;;;x
 JG2;Numazu;;;;;;;;;;;;;x
 JG3;Odawara;;;;;;;;;;;;;x
+JG4;Matsuoka;;;;;;;;;;;;;x
+JG5;Mito;;;;;;;;;;;;;x
+JG6;Kurobane;;;;;;;;;;;;;x
+JG7;Ôtawara;;;;;;;;;;;;;x
+JG8;Utsunomiya;;;;;;;;;;;;;x
+JG9;Karasuyama;;;;;;;;;;;;;x
+JH0;Kasama;;;;;;;;;;;;;x
+JH1;Hitachi-Shishido;;;;;;;;;;;;;x
+JH2;Hitachi-Fuchu;;;;;;;;;;;;;x
+JH3;Tsuchiura;;;;;;;;;;;;;x
+JH4;Asô;;;;;;;;;;;;;x
+JH5;Takaoka;;;;;;;;;;;;;x
+JH6;Sakura;;;;;;;;;;;;;x
+JH7;Oyumi;;;;;;;;;;;;;x
+JH8;Tsurumaki;;;;;;;;;;;;;x
+JH9;Kaifuchi;;;;;;;;;;;;;x
+JI0;Sanuki;;;;;;;;;;;;;x
+JI1;Awa-Katsuyama;;;;;;;;;;;;;x
+JI2;Tateyama;;;;;;;;;;;;;x
+JI3;Kururi;;;;;;;;;;;;;x
+JI4;Ôtaki;;;;;;;;;;;;;x
+JI5;Ichinomiya;;;;;;;;;;;;;x
+JI6;Ushiku;;;;;;;;;;;;;x
+JI7;Shimotsuma;;;;;;;;;;;;;x
+JI8;Shimodate;;;;;;;;;;;;;x
+JI9;Yuki;;;;;;;;;;;;;x
+JJ0;Sekiyado;;;;;;;;;;;;;x
+JJ1;Koga;;;;;;;;;;;;;x
+JJ2;Mibu;;;;;;;;;;;;;x
+JJ3;Sano;;;;;;;;;;;;;x
+JJ4;Tatebayashi;;;;;;;;;;;;;x
+JJ5;Ashikaga;;;;;;;;;;;;;x
+JJ6;Oshi;;;;;;;;;;;;;x
+JJ7;Kawagoe;;;;;;;;;;;;;x
+JJ8;Iwatsuki;;;;;;;;;;;;;x
+JJ9;Mutsuura;;;;;;;;;;;;;x
+JK0;Ogino Yamanaka;;;;;;;;;;;;;x
+JK1;Okabe;;;;;;;;;;;;;x
+JK2;Isekaki;;;;;;;;;;;;;x
+JK3;Takasaki;;;;;;;;;;;;;x
+JK4;Yoshii;;;;;;;;;;;;;x
+JK5;Obata;;;;;;;;;;;;;x
+JK6;Nanokaichi;;;;;;;;;;;;;x
+JK7;Annaka;;;;;;;;;;;;;x
+JK8;Numata;;;;;;;;;;;;;x
+JK9;Omigawa;;;;;;;;;;;;;x
 JAI;Jaipur;Jaipur;Jaipur;;;;;;;;;;;x
 JAL;Futa Jallon;;;;;;;;;;;;;x
 JAM;Jamaica;Jamaï¿½que;Jamaica;;;;;;;;;;;x
