--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -23,10 +23,10 @@ EVTOPTC99;Asia;;;;;;;;;;;;;x
 EVTOPTD99;Africa;;;;;;;;;;;;;x
 EVTOPTE99;North & South America + Oceania;;;;;;;;;;;;;x
 EVTNAME59;TGC Setup Options;;;;;;;;;;;;;x
-EVTDESC59;Welcomes to TGC's Setup Menu! Here you have a couple of options:\n\n§BReset All Options:§!Sets all options to the correct Default Setting, basically resetting any change you made.\n§BExtra Random:§! Disables all and any Railroading and sets up Lucky Nations, aiming for the most unpredictable campaign possible.\n§BSee All Options:§!Take a look at every setup option individually and hand pick whatever you want.\n§BRenaming Options:§!Change Province and State renaming configurations (This is also avaliable in the page 3 of the Utility Menu);;;;;;;;;;;;;x
+EVTDESC59;Welcomes to TGC's Setup Menu! Here you have a couple of options:\n\n§BReset All Options:§!Sets all options to the correct Default Setting, basically resetting any change you made.\n§BExtra Random:§! Disables all and any Railroading and sets up Lucky Nations, aiming for the most unpredictable campaign possible.\n§BSee All Options:§!Take a look at every setup option individually and hand pick whatever you want.\n§BCrimeaMOD Mode:§!Giga Buffs the AI in order to increase game difficulty, not balanced, not meant to be.;;;;;;;;;;;;;x
 EVTOPTA59;Reset All Options.;;;;;;;;;;;;;x
 EVTOPTB59;Extra Random mode.;;;;;;;;;;;;;x
-EVTOPTC59;Renaming options.;;;;;;;;;;;;;x
+EVTOPTC59;CrimeaMOD mode.;;;;;;;;;;;;;x
 EVTOPTD59;See All Options;;;;;;;;;;;;;x
 EVTOPTE59;I'm done with the setup.;;;;;;;;;;;;;x
 EVTNAME60;Setup Options, 1/4;;;;;;;;;;;;;x
