--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -23,7 +23,7 @@ EVTOPTC99;Asia;;;;;;;;;;;;;x
 EVTOPTD99;Africa;;;;;;;;;;;;;x
 EVTOPTE99;North & South America + Oceania;;;;;;;;;;;;;x
 EVTNAME59;TGC Setup Options;;;;;;;;;;;;;x
-EVTDESC59;Welcomes to TGC's Setup Menu! Here you have a couple of options:\n\n§BReset All Options:§!Sets all options to the correct Default Setting, basically resetting any change you made.\n§BExtra Random:§! Disables all and any Railroading and sets up Lucky Nations, aiming for the most unpredictable campaign possible.\n§BSee All Options:§!Take a look at every setup option individually and hand pick whatever you want.\n§BHard Mode:§! Giga Buffs the AI in order to increase game difficulty, not balanced, not meant to be.;;;;;;;;;;;;;x
+EVTDESC59;Welcomes to TGC's Setup Menu! Here you have a couple of options:\n\n§BReset All Options:§!Sets all options to the correct Default Setting, basically resetting any change you made.\n§BExtra Random:§! Disables all and any Railroading and sets up Lucky Nations, aiming for the most unpredictable campaign possible.\n§BHard Mode:§! Giga Buffs the AI in order to increase game difficulty, it's not balanced, and not meant to be.\n§BSee All Options:§!Take a look at every setup option individually and hand pick whatever you want.;;;;;;;;;;;;;x
 EVTOPTA59;Reset All Options.;;;;;;;;;;;;;x
 EVTOPTB59;Extra Random mode.;;;;;;;;;;;;;x
 EVTOPTC59;Hard Mode.;;;;;;;;;;;;;x
