some changes to endonymic loc

--- a/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -1074,10 +1074,10 @@ BYE_absolute_monarchy;Karalieustva Bielarus;x;
 BYE_prussian_constitutionalism;Karalieustva Bielarus;x;
 BYE_hms_government;Karalieustva Bielarus;x;
 BYE_democracy;Respublika Bielarus;x;
-BYE_proletarian_dictatorship;Bielaruskaja Sacyjalistycnaja Respublika;x;
+BYE_proletarian_dictatorship;Bielaruskaya Sacyjalistycnaya Respublika;x;
 BYE_presidential_dictatorship;Respublika Bielarus;x;
-BYE_bourgeois_dictatorship;Bielaruskaja Narodnaja Respublika;x;
-BYE_fascist_dictatorship;Bielaruskaja Nacyjanalnaja Respublika;x;
+BYE_bourgeois_dictatorship;Bielaruskaya Narodnaya Respublika;x;
+BYE_fascist_dictatorship;Bielaruskaya Nacyjanalnaya Respublika;x;
 BYE_colonial_company;Pratektarat Bielarusi;x;
 BYE_dominion;Pratektarat Bielarusi;x;
 ##### BYZ #####;
@@ -3533,9 +3533,10 @@ LIV_proletarian_dictatorship;Livonijas Komunistiska Republika;x;
 LIV_presidential_dictatorship;Livonijas Republika;x;
 LIV_bourgeois_dictatorship;Livonijas Republika;x;
 LIV_fascist_dictatorship;Liela Livonijas Valsts;x;
-LIV_colonial_company;Liflyandskaja Gubernija;x;
+LIV_colonial_company;Liflyandskaya Guberniya;x;
 LIV_rus_colonial_company;Livonijas Guberna;x;
 LIV_dominion;Livonijas Protektorats;x
+LIV_colonial_company_ADJ;Livl‰ndisches;x;
 #### LOA ####;
 LOA_absolute_monarchy;Kingdom of Lw„„gu;x;
 LOA_prussian_constitutionalism;Kingdom of Lw„„gu;x;
@@ -5861,7 +5862,7 @@ STH_proletarian_dictatorship;Eesti Sotsialistlik Vabariik;x;
 STH_presidential_dictatorship;Vaba Eesti Vabariik;x;
 STH_bourgeois_dictatorship;Vaba Eesti Vabariik;x;
 STH_fascist_dictatorship;Vaba Eesti Vabariik;x;
-STH_colonial_company;Estlyandskaja Gubernija;x;
+STH_colonial_company;Estlyandskaya Guberniya;x;
 STH_rus_colonial_company;Eestimaa Kubermang;x;
 STH_dominion;Eesti Protektoraat;x
 #### STK ####;
