utility menu fixes

--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -74,6 +74,7 @@ EVTDESC66;\n§BBorder Control options:§! Allow you to pick a different border pol
 EVTOPTA66;Border Control options;;;;;;;;;;;;;x
 EVTOPTB66;RGO Change Menus;;;;;;;;;;;;;x
 EVTOPTD66;Music Mod Options;;;;;;;;;;;;;x
+EVTOPTE66;Renaming Options;;;;;;;;;;;;;x
 EVTNAME67;Border Control options;;;;;;;;;;;;;x
 EVTDESC67;Pick whatever policy you want, but be aware: You will only be able to do that again after the §RLaw Changed by Force§! modifier goes away.;;;;;;;;;;;;;x
 EVTOPTA67;Open the borders.;;;;;;;;;;;;;x
