did positions for rest of kyushu, shikoku, and some of choshu

--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -340,216 +340,216 @@ ITP;Italy;;;;;;;;;;;;;x
 ITS;Italy;;;;;;;;;;;;;x
 IVC;Ivory Coast;;;;;;;;;;;;;x
 IZH;Ingria;;;;;;;;;;;;;x
-J00;Tanegashima;;;;;;;;;;;;;x
-J01;Miyakonojo;;;;;;;;;;;;;x
-J02;Takanabe;;;;;;;;;;;;;x
-J03;Obi;;;;;;;;;;;;;x
-J04;Nobeoka;;;;;;;;;;;;;x
-J05;Sadowara;;;;;;;;;;;;;x
-J06;Hitoyoshi;;;;;;;;;;;;;x
-J07;Kumamoto;;;;;;;;;;;;;x
-J08;Uto;;;;;;;;;;;;;x
-J09;Tsushima-Fuchu;;;;;;;;;;;;;x
-J10;Hirado;;;;;;;;;;;;;x
-J11;Fukue;;;;;;;;;;;;;x
-J12;Omura;;;;;;;;;;;;;x
-J13;Shimabara;;;;;;;;;;;;;x
-J14;Saga;;;;;;;;;;;;;x
-J15;Kashima;;;;;;;;;;;;;x
-J16;Ogi;;;;;;;;;;;;;x
-J17;Karatsu;;;;;;;;;;;;;x
-J18;Yanagawa;;;;;;;;;;;;;x
-J19;Kurume;;;;;;;;;;;;;x
-J20;Fukuoka;;;;;;;;;;;;;x
-J21;Akizuki;;;;;;;;;;;;;x
-J22;Kokura;;;;;;;;;;;;;x
-J23;Nakatsu;;;;;;;;;;;;;x
-J24;Mori;;;;;;;;;;;;;x
-J25;Kitsuki;;;;;;;;;;;;;x
-J26;Hiji;;;;;;;;;;;;;x
-J27;Funai;;;;;;;;;;;;;x
-J28;Usuki;;;;;;;;;;;;;x
-J29;Saeki;;;;;;;;;;;;;x
-J30;Oka;;;;;;;;;;;;;x
-J31;Tokushima;;;;;;;;;;;;;x
-J32;Takamatsu;;;;;;;;;;;;;x
-J33;Marugame;;;;;;;;;;;;;x
-J34;Tadotsu;;;;;;;;;;;;;x
-J35;Saijo;;;;;;;;;;;;;x
-J36;Iyo-Matsuyama;;;;;;;;;;;;;x
-J37;Imabari;;;;;;;;;;;;;x
-J38;Ozu;;;;;;;;;;;;;x
-J39;Uwajima;;;;;;;;;;;;;x
-J40;Iyo-Yoshida;;;;;;;;;;;;;x
-J41;Chofu;;;;;;;;;;;;;x
-J42;Tokuyama;;;;;;;;;;;;;x
-J43;Iwakuni;;;;;;;;;;;;;x
-J44;Tsuwano;;;;;;;;;;;;;x
-J45;Hamada;;;;;;;;;;;;;x
-J46;Matsue;;;;;;;;;;;;;x
-J47;Hirose;;;;;;;;;;;;;x
-J48;Tottori;;;;;;;;;;;;;x
-J49;Hiroshima;;;;;;;;;;;;;x
-J50;Fukuyama;;;;;;;;;;;;;x
-J51;Niimi;;;;;;;;;;;;;x
-J52;Bitchu-Matsuyama;;;;;;;;;;;;;x
-J53;Nariwa;;;;;;;;;;;;;x
-J54;Ashimori;;;;;;;;;;;;;x
-J55;Asao;;;;;;;;;;;;;x
-J56;Okada;;;;;;;;;;;;;x
-J57;Niwase;;;;;;;;;;;;;x
-J58;Kamogata;;;;;;;;;;;;;x
-J59;Okayama;;;;;;;;;;;;;x
-J60;Mimasaka-Katsuyama;;;;;;;;;;;;;x
-J61;Tsuyama;;;;;;;;;;;;;x
-J62;Kishu;;;;;;;;;;;;;x
-J63;Tamaru;;;;;;;;;;;;;x
-J64;Toba;;;;;;;;;;;;;x
-J65;Tsu;;;;;;;;;;;;;x
-J66;Ise-Kameyama;;;;;;;;;;;;;x
-J67;Kanbe;;;;;;;;;;;;;x
-J68;Hatta;;;;;;;;;;;;;x
-J69;Komono;;;;;;;;;;;;;x
-J70;Kuwana;;;;;;;;;;;;;x
-J71;Nagashima;;;;;;;;;;;;;x
-J72;Hikone;;;;;;;;;;;;;x
-J73;Omi-Miyagawa;;;;;;;;;;;;;x
-J74;Omizo;;;;;;;;;;;;;x
-J75;Yamakami;;;;;;;;;;;;;x
-J76;Minakuchi;;;;;;;;;;;;;x
-J77;Mikami;;;;;;;;;;;;;x
-J78;Zeze;;;;;;;;;;;;;x
-J79;Yodo;;;;;;;;;;;;;x
-J80;Yagyu;;;;;;;;;;;;;x
-J81;Koriyama;;;;;;;;;;;;;x
-J82;Yanagimoto;;;;;;;;;;;;;x
-J83;Takatori;;;;;;;;;;;;;x
-J84;Yamato-Shinjo;;;;;;;;;;;;;x
-J85;Tawaramoto;;;;;;;;;;;;;x
-J86;Koizumi;;;;;;;;;;;;;x
-J87;Tannan;;;;;;;;;;;;;x
-J88;Sayama;;;;;;;;;;;;;x
-J89;Kishiwada;;;;;;;;;;;;;x
-J90;Hakata;;;;;;;;;;;;;x
-J91;Takatsuki;;;;;;;;;;;;;x
-J92;Asada;;;;;;;;;;;;;x
-J93;Amagasaki;;;;;;;;;;;;;x
-J94;Akashi;;;;;;;;;;;;;x
-J95;Himeji;;;;;;;;;;;;;x
-J96;Ako;;;;;;;;;;;;;x
-J97;Tatsuno;;;;;;;;;;;;;x
-J98;Yamasaki;;;;;;;;;;;;;x
-J99;Fukumoto;;;;;;;;;;;;;x
-JA0;Mikusa;;;;;;;;;;;;;x
-JA1;Ono;;;;;;;;;;;;;x
-JA2;Sanda;;;;;;;;;;;;;x
-JA3;Sasayama;;;;;;;;;;;;;x
-JA4;Tanba-Kameyama;;;;;;;;;;;;;x
-JA5;Sonobe;;;;;;;;;;;;;x
-JA6;Kashiwabara;;;;;;;;;;;;;x
-JA7;Ayabe;;;;;;;;;;;;;x
-JA8;Fukuchiyama;;;;;;;;;;;;;x
-JA9;Izushi;;;;;;;;;;;;;x
-JB0;Toyooka;;;;;;;;;;;;;x
-JB1;Muraoka;;;;;;;;;;;;;x
-JB2;Miyazu;;;;;;;;;;;;;x
-JB3;Murakami;;;;;;;;;;;;;x
-JB4;Kurokawa;;;;;;;;;;;;;x
-JB5;Shibata;;;;;;;;;;;;;x
-JB6;Muramatsu;;;;;;;;;;;;;x
-JB7;Mineoka;;;;;;;;;;;;;x
-JB8;Echigo-Nagaoka;;;;;;;;;;;;;x
-JB9;Yoita;;;;;;;;;;;;;x
-JC0;Shiiya;;;;;;;;;;;;;x
-JC1;Takada;;;;;;;;;;;;;x
-JC2;Itoigawa;;;;;;;;;;;;;x
-JC3;Toyama;;;;;;;;;;;;;x
-JC4;Daishoji;;;;;;;;;;;;;x
-JC5;Maruoka;;;;;;;;;;;;;x
-JC6;Fukui;;;;;;;;;;;;;x
-JC7;Sabae;;;;;;;;;;;;;x
-JC8;Ôno;;;;;;;;;;;;;x
-JC9;Echizen-Katsuyama;;;;;;;;;;;;;x
-JD0;Tsuruga;;;;;;;;;;;;;x
-JD1;Obama;;;;;;;;;;;;;x
-JD2;Gujô;;;;;;;;;;;;;x
-JD3;Owari;;;;;;;;;;;;;x
-JD4;Ôgaki;;;;;;;;;;;;;x
-JD5;Kanô;;;;;;;;;;;;;x
-JD6;Takasu;;;;;;;;;;;;;x
-JD7;Naegi;;;;;;;;;;;;;x
-JD8;Iwamura;;;;;;;;;;;;;x
-JD9;Iiyama;;;;;;;;;;;;;x
-JE0;Suzaka;;;;;;;;;;;;;x
-JE1;Matsushiro;;;;;;;;;;;;;x
-JE2;Ueda;;;;;;;;;;;;;x
-JE3;Matsumoto;;;;;;;;;;;;;x
-JE4;Komoro;;;;;;;;;;;;;x
-JE5;Iwamurada;;;;;;;;;;;;;x
-JE6;Okutono;;;;;;;;;;;;;x
-JE7;Suwa;;;;;;;;;;;;;x
-JE8;Takatô;;;;;;;;;;;;;x
-JE9;Iida;;;;;;;;;;;;;x
-JF0;Koromo;;;;;;;;;;;;;x
-JF1;Kariya;;;;;;;;;;;;;x
-JF2;Nishibata;;;;;;;;;;;;;x
-JF3;Nishio;;;;;;;;;;;;;x
-JF4;Okazaki;;;;;;;;;;;;;x
-JF5;Tahara;;;;;;;;;;;;;x
-JF6;Yoshida;;;;;;;;;;;;;x
-JF7;Shinshiro;;;;;;;;;;;;;x
-JF8;Hamamatsu;;;;;;;;;;;;;x
-JF9;Yokosuka;;;;;;;;;;;;;x
-JG0;Kakegawa;;;;;;;;;;;;;x
-JG1;Sagara;;;;;;;;;;;;;x
-JG2;Numazu;;;;;;;;;;;;;x
-JG3;Odawara;;;;;;;;;;;;;x
-JG4;Matsuoka;;;;;;;;;;;;;x
-JG5;Mito;;;;;;;;;;;;;x
-JG6;Kurobane;;;;;;;;;;;;;x
-JG7;Ôtawara;;;;;;;;;;;;;x
-JG8;Utsunomiya;;;;;;;;;;;;;x
-JG9;Karasuyama;;;;;;;;;;;;;x
-JH0;Kasama;;;;;;;;;;;;;x
-JH1;Hitachi-Shishido;;;;;;;;;;;;;x
-JH2;Hitachi-Fuchu;;;;;;;;;;;;;x
-JH3;Tsuchiura;;;;;;;;;;;;;x
-JH4;Asô;;;;;;;;;;;;;x
-JH5;Takaoka;;;;;;;;;;;;;x
-JH6;Sakura;;;;;;;;;;;;;x
-JH7;Oyumi;;;;;;;;;;;;;x
-JH8;Tsurumaki;;;;;;;;;;;;;x
-JH9;Kaifuchi;;;;;;;;;;;;;x
-JI0;Sanuki;;;;;;;;;;;;;x
-JI1;Awa-Katsuyama;;;;;;;;;;;;;x
-JI2;Tateyama;;;;;;;;;;;;;x
-JI3;Kururi;;;;;;;;;;;;;x
-JI4;Ôtaki;;;;;;;;;;;;;x
-JI5;Ichinomiya;;;;;;;;;;;;;x
-JI6;Ushiku;;;;;;;;;;;;;x
-JI7;Shimotsuma;;;;;;;;;;;;;x
-JI8;Shimodate;;;;;;;;;;;;;x
-JI9;Yuki;;;;;;;;;;;;;x
-JJ0;Sekiyado;;;;;;;;;;;;;x
-JJ1;Koga;;;;;;;;;;;;;x
-JJ2;Mibu;;;;;;;;;;;;;x
-JJ3;Sano;;;;;;;;;;;;;x
-JJ4;Tatebayashi;;;;;;;;;;;;;x
-JJ5;Ashikaga;;;;;;;;;;;;;x
-JJ6;Oshi;;;;;;;;;;;;;x
-JJ7;Kawagoe;;;;;;;;;;;;;x
-JJ8;Iwatsuki;;;;;;;;;;;;;x
-JJ9;Mutsuura;;;;;;;;;;;;;x
-JK0;Ogino Yamanaka;;;;;;;;;;;;;x
-JK1;Okabe;;;;;;;;;;;;;x
-JK2;Isekaki;;;;;;;;;;;;;x
-JK3;Takasaki;;;;;;;;;;;;;x
-JK4;Yoshii;;;;;;;;;;;;;x
-JK5;Obata;;;;;;;;;;;;;x
-JK6;Nanokaichi;;;;;;;;;;;;;x
-JK7;Annaka;;;;;;;;;;;;;x
-JK8;Numata;;;;;;;;;;;;;x
-JK9;Omigawa;;;;;;;;;;;;;x
+#J00;Tanegashima;;;;;;;;;;;;;x
+#J01;Miyakonojo;;;;;;;;;;;;;x
+#J02;Takanabe;;;;;;;;;;;;;x
+#J03;Obi;;;;;;;;;;;;;x
+#J04;Nobeoka;;;;;;;;;;;;;x
+#J05;Sadowara;;;;;;;;;;;;;x
+#J06;Hitoyoshi;;;;;;;;;;;;;x
+#J07;Kumamoto;;;;;;;;;;;;;x
+#J08;Uto;;;;;;;;;;;;;x
+#J09;Tsushima-Fuchu;;;;;;;;;;;;;x
+#J10;Hirado;;;;;;;;;;;;;x
+#J11;Fukue;;;;;;;;;;;;;x
+#J12;Omura;;;;;;;;;;;;;x
+#J13;Shimabara;;;;;;;;;;;;;x
+#J14;Saga;;;;;;;;;;;;;x
+#J15;Kashima;;;;;;;;;;;;;x
+#J16;Ogi;;;;;;;;;;;;;x
+#J17;Karatsu;;;;;;;;;;;;;x
+#J18;Yanagawa;;;;;;;;;;;;;x
+#J19;Kurume;;;;;;;;;;;;;x
+#J20;Fukuoka;;;;;;;;;;;;;x
+#J21;Akizuki;;;;;;;;;;;;;x
+#J22;Kokura;;;;;;;;;;;;;x
+#J23;Nakatsu;;;;;;;;;;;;;x
+#J24;Mori;;;;;;;;;;;;;x
+#J25;Kitsuki;;;;;;;;;;;;;x
+#J26;Hiji;;;;;;;;;;;;;x
+#J27;Funai;;;;;;;;;;;;;x
+#J28;Usuki;;;;;;;;;;;;;x
+#J29;Saeki;;;;;;;;;;;;;x
+#J30;Oka;;;;;;;;;;;;;x
+#J31;Tokushima;;;;;;;;;;;;;x
+#J32;Takamatsu;;;;;;;;;;;;;x
+#J33;Marugame;;;;;;;;;;;;;x
+#J34;Tadotsu;;;;;;;;;;;;;x
+#J35;Saijo;;;;;;;;;;;;;x
+#J36;Iyo-Matsuyama;;;;;;;;;;;;;x
+#J37;Imabari;;;;;;;;;;;;;x
+#J38;Ozu;;;;;;;;;;;;;x
+#J39;Uwajima;;;;;;;;;;;;;x
+#J40;Iyo-Yoshida;;;;;;;;;;;;;x
+#J41;Chofu;;;;;;;;;;;;;x
+#J42;Tokuyama;;;;;;;;;;;;;x
+#J43;Iwakuni;;;;;;;;;;;;;x
+#J44;Tsuwano;;;;;;;;;;;;;x
+#J45;Hamada;;;;;;;;;;;;;x
+#J46;Matsue;;;;;;;;;;;;;x
+#J47;Hirose;;;;;;;;;;;;;x
+#J48;Tottori;;;;;;;;;;;;;x
+#J49;Hiroshima;;;;;;;;;;;;;x
+#J50;Fukuyama;;;;;;;;;;;;;x
+#J51;Niimi;;;;;;;;;;;;;x
+#J52;Bitchu-Matsuyama;;;;;;;;;;;;;x
+#J53;Nariwa;;;;;;;;;;;;;x
+#J54;Ashimori;;;;;;;;;;;;;x
+#J55;Asao;;;;;;;;;;;;;x
+#J56;Okada;;;;;;;;;;;;;x
+#J57;Niwase;;;;;;;;;;;;;x
+#J58;Kamogata;;;;;;;;;;;;;x
+#J59;Okayama;;;;;;;;;;;;;x
+#J60;Mimasaka-Katsuyama;;;;;;;;;;;;;x
+#J61;Tsuyama;;;;;;;;;;;;;x
+#J62;Kishu;;;;;;;;;;;;;x
+#J63;Tamaru;;;;;;;;;;;;;x
+#J64;Toba;;;;;;;;;;;;;x
+#J65;Tsu;;;;;;;;;;;;;x
+#J66;Ise-Kameyama;;;;;;;;;;;;;x
+#J67;Kanbe;;;;;;;;;;;;;x
+#J68;Hatta;;;;;;;;;;;;;x
+#J69;Komono;;;;;;;;;;;;;x
+#J70;Kuwana;;;;;;;;;;;;;x
+#J71;Nagashima;;;;;;;;;;;;;x
+#J72;Hikone;;;;;;;;;;;;;x
+#J73;Omi-Miyagawa;;;;;;;;;;;;;x
+#J74;Omizo;;;;;;;;;;;;;x
+#J75;Yamakami;;;;;;;;;;;;;x
+#J76;Minakuchi;;;;;;;;;;;;;x
+#J77;Mikami;;;;;;;;;;;;;x
+#J78;Zeze;;;;;;;;;;;;;x
+#J79;Yodo;;;;;;;;;;;;;x
+#J80;Yagyu;;;;;;;;;;;;;x
+#J81;Koriyama;;;;;;;;;;;;;x
+#J82;Yanagimoto;;;;;;;;;;;;;x
+#J83;Takatori;;;;;;;;;;;;;x
+#J84;Yamato-Shinjo;;;;;;;;;;;;;x
+#J85;Tawaramoto;;;;;;;;;;;;;x
+#J86;Koizumi;;;;;;;;;;;;;x
+#J87;Tannan;;;;;;;;;;;;;x
+#J88;Sayama;;;;;;;;;;;;;x
+#J89;Kishiwada;;;;;;;;;;;;;x
+#J90;Hakata;;;;;;;;;;;;;x
+#J91;Takatsuki;;;;;;;;;;;;;x
+#J92;Asada;;;;;;;;;;;;;x
+#J93;Amagasaki;;;;;;;;;;;;;x
+#J94;Akashi;;;;;;;;;;;;;x
+#J95;Himeji;;;;;;;;;;;;;x
+#J96;Ako;;;;;;;;;;;;;x
+#J97;Tatsuno;;;;;;;;;;;;;x
+#J98;Yamasaki;;;;;;;;;;;;;x
+#J99;Fukumoto;;;;;;;;;;;;;x
+#JA0;Mikusa;;;;;;;;;;;;;x
+#JA1;Ono;;;;;;;;;;;;;x
+#JA2;Sanda;;;;;;;;;;;;;x
+#JA3;Sasayama;;;;;;;;;;;;;x
+#JA4;Tanba-Kameyama;;;;;;;;;;;;;x
+#JA5;Sonobe;;;;;;;;;;;;;x
+#JA6;Kashiwabara;;;;;;;;;;;;;x
+#JA7;Ayabe;;;;;;;;;;;;;x
+#JA8;Fukuchiyama;;;;;;;;;;;;;x
+#JA9;Izushi;;;;;;;;;;;;;x
+#JB0;Toyooka;;;;;;;;;;;;;x
+#JB1;Muraoka;;;;;;;;;;;;;x
+#JB2;Miyazu;;;;;;;;;;;;;x
+#JB3;Murakami;;;;;;;;;;;;;x
+#JB4;Kurokawa;;;;;;;;;;;;;x
+#JB5;Shibata;;;;;;;;;;;;;x
+#JB6;Muramatsu;;;;;;;;;;;;;x
+#JB7;Mineoka;;;;;;;;;;;;;x
+#JB8;Echigo-Nagaoka;;;;;;;;;;;;;x
+#JB9;Yoita;;;;;;;;;;;;;x
+#JC0;Shiiya;;;;;;;;;;;;;x
+#JC1;Takada;;;;;;;;;;;;;x
+#JC2;Itoigawa;;;;;;;;;;;;;x
+#JC3;Toyama;;;;;;;;;;;;;x
+#JC4;Daishoji;;;;;;;;;;;;;x
+#JC5;Maruoka;;;;;;;;;;;;;x
+#JC6;Fukui;;;;;;;;;;;;;x
+#JC7;Sabae;;;;;;;;;;;;;x
+#JC8;Ôno;;;;;;;;;;;;;x
+#JC9;Echizen-Katsuyama;;;;;;;;;;;;;x
+#JD0;Tsuruga;;;;;;;;;;;;;x
+#JD1;Obama;;;;;;;;;;;;;x
+#JD2;Gujô;;;;;;;;;;;;;x
+#JD3;Owari;;;;;;;;;;;;;x
+#JD4;Ôgaki;;;;;;;;;;;;;x
+#JD5;Kanô;;;;;;;;;;;;;x
+#JD6;Takasu;;;;;;;;;;;;;x
+#JD7;Naegi;;;;;;;;;;;;;x
+#JD8;Iwamura;;;;;;;;;;;;;x
+#JD9;Iiyama;;;;;;;;;;;;;x
+#JE0;Suzaka;;;;;;;;;;;;;x
+#JE1;Matsushiro;;;;;;;;;;;;;x
+#JE2;Ueda;;;;;;;;;;;;;x
+#JE3;Matsumoto;;;;;;;;;;;;;x
+#JE4;Komoro;;;;;;;;;;;;;x
+#JE5;Iwamurada;;;;;;;;;;;;;x
+#JE6;Okutono;;;;;;;;;;;;;x
+#JE7;Suwa;;;;;;;;;;;;;x
+#JE8;Takatô;;;;;;;;;;;;;x
+#JE9;Iida;;;;;;;;;;;;;x
+#JF0;Koromo;;;;;;;;;;;;;x
+#JF1;Kariya;;;;;;;;;;;;;x
+#JF2;Nishibata;;;;;;;;;;;;;x
+#JF3;Nishio;;;;;;;;;;;;;x
+#JF4;Okazaki;;;;;;;;;;;;;x
+#JF5;Tahara;;;;;;;;;;;;;x
+#JF6;Yoshida;;;;;;;;;;;;;x
+#JF7;Shinshiro;;;;;;;;;;;;;x
+#JF8;Hamamatsu;;;;;;;;;;;;;x
+#JF9;Yokosuka;;;;;;;;;;;;;x
+#JG0;Kakegawa;;;;;;;;;;;;;x
+#JG1;Sagara;;;;;;;;;;;;;x
+#JG2;Numazu;;;;;;;;;;;;;x
+#JG3;Odawara;;;;;;;;;;;;;x
+#JG4;Matsuoka;;;;;;;;;;;;;x
+#JG5;Mito;;;;;;;;;;;;;x
+#JG6;Kurobane;;;;;;;;;;;;;x
+#JG7;Ôtawara;;;;;;;;;;;;;x
+#JG8;Utsunomiya;;;;;;;;;;;;;x
+#JG9;Karasuyama;;;;;;;;;;;;;x
+#JH0;Kasama;;;;;;;;;;;;;x
+#JH1;Hitachi-Shishido;;;;;;;;;;;;;x
+#JH2;Hitachi-Fuchu;;;;;;;;;;;;;x
+#JH3;Tsuchiura;;;;;;;;;;;;;x
+#JH4;Asô;;;;;;;;;;;;;x
+#JH5;Takaoka;;;;;;;;;;;;;x
+#JH6;Sakura;;;;;;;;;;;;;x
+#JH7;Oyumi;;;;;;;;;;;;;x
+#JH8;Tsurumaki;;;;;;;;;;;;;x
+#JH9;Kaifuchi;;;;;;;;;;;;;x
+#JI0;Sanuki;;;;;;;;;;;;;x
+#JI1;Awa-Katsuyama;;;;;;;;;;;;;x
+#JI2;Tateyama;;;;;;;;;;;;;x
+#JI3;Kururi;;;;;;;;;;;;;x
+#JI4;Ôtaki;;;;;;;;;;;;;x
+#JI5;Ichinomiya;;;;;;;;;;;;;x
+#JI6;Ushiku;;;;;;;;;;;;;x
+#JI7;Shimotsuma;;;;;;;;;;;;;x
+#JI8;Shimodate;;;;;;;;;;;;;x
+#JI9;Yuki;;;;;;;;;;;;;x
+#JJ0;Sekiyado;;;;;;;;;;;;;x
+#JJ1;Koga;;;;;;;;;;;;;x
+#JJ2;Mibu;;;;;;;;;;;;;x
+#JJ3;Sano;;;;;;;;;;;;;x
+#JJ4;Tatebayashi;;;;;;;;;;;;;x
+#JJ5;Ashikaga;;;;;;;;;;;;;x
+#JJ6;Oshi;;;;;;;;;;;;;x
+#JJ7;Kawagoe;;;;;;;;;;;;;x
+#JJ8;Iwatsuki;;;;;;;;;;;;;x
+#JJ9;Mutsuura;;;;;;;;;;;;;x
+#JK0;Ogino Yamanaka;;;;;;;;;;;;;x
+#JK1;Okabe;;;;;;;;;;;;;x
+#JK2;Isekaki;;;;;;;;;;;;;x
+#JK3;Takasaki;;;;;;;;;;;;;x
+#JK4;Yoshii;;;;;;;;;;;;;x
+#JK5;Obata;;;;;;;;;;;;;x
+#JK6;Nanokaichi;;;;;;;;;;;;;x
+#JK7;Annaka;;;;;;;;;;;;;x
+#JK8;Numata;;;;;;;;;;;;;x
+#JK9;Omigawa;;;;;;;;;;;;;x
 JAI;Jaipur;Jaipur;Jaipur;;;;;;;;;;;x
 JAL;Futa Jallon;;;;;;;;;;;;;x
 JAM;Jamaica;Jamaï¿½que;Jamaica;;;;;;;;;;;x
