added decision to swap flag at any point as RUS

--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -870,6 +870,11 @@ EVTDESC501294;What is to be done with these restless efendis?;;;;;;;;;;;;;x
 EVTNAME501294;Ottoman Elites Fate;;;;;;;;;;;;;x
 EVTOPTA501294;Deport them to Central Asia;;;;;;;;;;;;;x
 EVTOPTB501294;Leave them be;;;;;;;;;;;;;x
+EVTNAME501295;Flag of Russian Empire;;;;;;;;;;;;;x
+EVTDESC501295;§WWhite, §BBlue, §RRed §b: There are several interpretations of the flag. Some say the white represented nobility, the blue represented the clergy, and the red represented the people. During Alexander III's reign, the white color symbolizes nobility, the blue for faithfulness, and the red for courage, generosity, and love. Unofficial ones range from Red for (Great) Russia, White for White Russia, and Blue for Little Russia. It was used as civil ensign since Peter the Great. It inspired Slavic Nationalists to adopt the tricolore as basis of their flags in 19th century. \n Black-§YYellow-§WWhite§b: On 11 June 1858, by decree of Alexander II, the heraldic colors of the empire were approved for flags, banners and other items. It became the first State flag of Russia in 1865. The white-blue-red flag was reintroduced in 1883 but the black-yellow-white remained in use until it was fully replaced in all circumstances in 1896.;;;;;;;;;;;;;x
+EVTOPTA501295;We will fly the §WWhite, §BBlue, §RRed §bTricolore (with double-headed imp. eagle in top left corner);;;;;;;;;;;;;x
+EVTOPTB501295;We will fly the Dynastic Flag of Romanovs (Black-§YYellow-§WWhite§b);;;;;;;;;;;;;x
+EVTOPTC501295;We will stay with the one we have;;;;;;;;;;;;;x
 EVTDESC900643;The Ottomans have refused our offer. Evidently, they will take their chances.;;;;;;;;;;;;;x
 EVTNAME900643;The Ottomans Have Refused;;;;;;;;;;;;;x
 EVTOPTA900643;We accept their decision.;;;;;;;;;;;;;x
