added flag swap decision

--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3609,3 +3609,5 @@ dismantle_german_confederation_desc;Our armies triumphantly march through Berlin
 dismantle_german_confederation_title;Dismantle the German Confederation;;;;;;;;;;;;;x
 press_schleswig_issue_title;Press the Schleswig Issue;;;;;;;;;;;;;x
 press_schleswig_issue_desc;;;;;;;;;;;;;;x
+russia_monarchy_swap_flag_title;Swap Our Flag;;;;;;;;;;;;;x
+russia_monarchy_swap_flag_desc;The Russian Empire was famous for its usage of both the Black-Yellow-White and White-Blue-Red flag. As we remain a monarchy, we may swap between the two as Your Majesty desires.;;;;;;;;;;;;;x
