panama stuff fixed
fix

--- a/TGC/localisation/00_map-regions.csv
+++ b/TGC/localisation/00_map-regions.csv
@@ -504,7 +504,8 @@ ALD_1708;Qusantinah;;;;;;;;;;;;;x
 ALD_1713;Aïn Séfra;;;;;;;;;;;;;x
 ALD_1714;Béchar;;;;;;;;;;;;;x
 ALD_1718;Oasis;;;;;;;;;;;;;x
-CLM_1723;Istmo;;;;;;;;;;;;;x
+CLM_1723;Istmo Occidental;;;;;;;;;;;;;x
+CLM_1724;Istmo Oriental;;;;;;;;;;;;;x
 TUN_1726;Tunisia;;;;;;;;;;;;;x
 TRI_1731;Tripolitania;;;;;;;;;;;;;x
 TRI_1735;Cyrenaica;;;;;;;;;;;;;x
