--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3874,11 +3874,11 @@ PROV3872;Abashiri;;;;;;;;;;;;;x
 PROV3873;Obihiro;;;;;;;;;;;;;x
 PROV3874;Asahikawa;;;;;;;;;;;;;x
 PROV3875;Almelo;;;;;;;;;;;;;x
-PROV3876;Letsenqat;;;;;;;;;;;;;x
-PROV3877;San Pedro;;;;;;;;;;;;;x
-PROV3878;Chupitas;;;;;;;;;;;;;x
-PROV3879;Towaset;;;;;;;;;;;;;x
-PROV3880;Piedra Grande;;;;;;;;;;;;;x
+PROV3876;Isla del Rey;;;;;;;;;;;;;x
+PROV3877;El Darién;;;;;;;;;;;;;x
+PROV3878;Penonomé;;;;;;;;;;;;;x
+PROV3879;Azuero;;;;;;;;;;;;;x
+PROV3880;Santiago;;;;;;;;;;;;;x
 PROV3881;Tío;;;;;;;;;;;;;x
 PROV3882;San Miguel de los Calchines;;;;;;;;;;;;;x
 PROV3883;Carre-Hué;;;;;;;;;;;;;x
