Hawaii Province Update
Update changes the names of the hawaiian provinces to be native hawaiian names, adds positions, makes the main islands a total of four, updates pop data to be as accurate as possible. All the provinces are connected by straits, so they can be traveled across without boats when troops are landed. Exact pop information regarding farmers and artisans and craftsmen I am not sure about but I based it on the base pop ratios we had already.

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -656,7 +656,7 @@ PROV654;Klausenburg;;;;;;;;;;;;;x
 PROV655;Karlsburg;;;;;;;;;;;;;x
 PROV656;Diemrich;;;;;;;;;;;;;x
 PROV657;Hermannstadt;;;;;;;;;;;;;x
-PROV658;Sandwich Islands;;;;;;;;;;;;;x
+PROV658;O'ahu;;;;;;;;;;;;;x
 PROV659;Kronstadt;;;;;;;;;;;;;x
 PROV660;Oderhellen;;;;;;;;;;;;;x
 PROV661;Bistritz;;;;;;;;;;;;;x
@@ -3879,9 +3879,9 @@ PROV3877;El Darién;;;;;;;;;;;;;x
 PROV3878;Penonomé;;;;;;;;;;;;;x
 PROV3879;Azuero;;;;;;;;;;;;;x
 PROV3880;Santiago;;;;;;;;;;;;;x
-PROV3881;Tío;;;;;;;;;;;;;x
-PROV3882;San Miguel de los Calchines;;;;;;;;;;;;;x
-PROV3883;Carre-Hué;;;;;;;;;;;;;x
+PROV3881;Hawai'i;;;;;;;;;;;;;x
+PROV3882;Maui;;;;;;;;;;;;;x
+PROV3883;Kaua'i;;;;;;;;;;;;;x
 PROV3884;Calbuco;;;;;;;;;;;;;x
 PROV3885;Epulafquen;;;;;;;;;;;;;x
 PROV3886;Huarhuar Co;;;;;;;;;;;;;x
