--- a/TGC/localisation/00_map-regions.csv
+++ b/TGC/localisation/00_map-regions.csv
@@ -202,7 +202,7 @@ AUS_652;Ostbanat;;;;;;;;;;;;;x
 AUS_792;Westbanat;;;;;;;;;;;;;x
 AUS_654;Nordsiebenbürgen;;;;;;;;;;;;;x
 AUS_657;Südsiebenbürgen;;;;;;;;;;;;;x
-HAW_658;Sandwich Islands;;;;;;;;;;;;;x
+HAW_658;Hawaiian Islands;;;;;;;;;;;;;x
 AUS_662;Ostgalizien;;;;;;;;;;;;;x
 AUS_663;Bukowina;;;;;;;;;;;;;x
 WAL_665;Muntenia;;;;;;;;;;;;;x
