added some loc and a new event for russia

--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -281,26 +281,30 @@ EVTOPTB500068;Seize Polish Bonds;;;;;;;;;;;;;x
 EVTOPTC500068;Strengthen the Congressional Government;;;;;;;;;;;;;x
 EVTOPTD500068;Investigate Congressional Officials;;;;;;;;;;;;;x
 EVTOPTE500068;Exit;;;;;;;;;;;;;x
-EVTDESC93;Localization;;;;;;;;;;;;;x
-EVTNAME93;Integration of Poznan;;;;;;;;;;;;;x
-EVTOPTA93;Localization;;;;;;;;;;;;;x
-EVTDESC94;Localization;;;;;;;;;;;;;x
-EVTNAME94;Integration of Silesia;;;;;;;;;;;;;x
-EVTOPTA94;Localization;;;;;;;;;;;;;x
-EVTDESC95;Localization;;;;;;;;;;;;;x
-EVTNAME95;Integration of East Prussia;;;;;;;;;;;;;x
-EVTOPTA95;Localization;;;;;;;;;;;;;x
-EVTOPTB95;Localization;;;;;;;;;;;;;x
-EVTDESC96;Localization;;;;;;;;;;;;;x
-EVTNAME96;Integration of West Prussia;;;;;;;;;;;;;x
-EVTOPTA96;Localization;;;;;;;;;;;;;x
-EVTDESC97;Localization;;;;;;;;;;;;;x
-EVTNAME97;Integration of West Galicia;;;;;;;;;;;;;x
-EVTOPTA97;Localization;;;;;;;;;;;;;x
-EVTDESC98;Localization;;;;;;;;;;;;;x
-EVTNAME98;Integration of East Galicia;;;;;;;;;;;;;x
-EVTOPTA98;Localization;;;;;;;;;;;;;x
-EVTOPTB98;Localization;;;;;;;;;;;;;x
+EVTDESC500092;Localization;;;;;;;;;;;;;x
+EVTNAME500092;Land Transfer to the Congress Kingdom;;;;;;;;;;;;;x
+EVTOPTA500092;As promised.;;;;;;;;;;;;;x
+EVTDESC500093;Localization;;;;;;;;;;;;;x
+EVTNAME500093;Integration of Poznan;;;;;;;;;;;;;x
+EVTOPTA500093;Greater Poland must be reunited with its brothers and sisters across the border.;;;;;;;;;;;;;x
+EVTDESC500094;Localization;;;;;;;;;;;;;x
+EVTNAME500094;Integration of Silesia;;;;;;;;;;;;;x
+EVTOPTA500094;The lands must go to Poland.;;;;;;;;;;;;;x
+EVTDESC500095;Localization;;;;;;;;;;;;;x
+EVTNAME500095;Integration of East Prussia;;;;;;;;;;;;;x
+EVTOPTA500095;The once-Polish fief of Prussia shall be returned.;;;;;;;;;;;;;x
+EVTOPTB500095;East Prussia, burnt more than once with Russian blood, must once again become the Russian land.;;;;;;;;;;;;;x
+EVTDESC500096;Localization;;;;;;;;;;;;;x
+EVTNAME500096;Integration of West Prussia;;;;;;;;;;;;;x
+EVTOPTA500096;The First Partition shall be undone.;;;;;;;;;;;;;x
+EVTOPTB500096;Gdansk and Torun shall be Russian fortresses!;;;;;;;;;;;;;x
+EVTDESC500097;Localization;;;;;;;;;;;;;x
+EVTNAME500097;Integration of West Galicia;;;;;;;;;;;;;x
+EVTOPTA500097;Lesser Poland must be reunited with its brothers and sisters across the border.;;;;;;;;;;;;;x
+EVTDESC500098;Localization;;;;;;;;;;;;;x
+EVTNAME500098;Integration of East Galicia;;;;;;;;;;;;;x
+EVTOPTA500098;All of Galicia shall be granted to the Congress Kingdom.;;;;;;;;;;;;;x
+EVTOPTB500098;Halychyna is Ukrainian — we shall integrate it directly.;;;;;;;;;;;;;x
 EVTDESC500099;For centuries, we and the Poles have fought over any number of issues : land, religion, or power. Which Russian could have forgotten the Time of Troubles, when the Polish-Lithuanian Commonwealth marched into Moskva and seized Smolensk from the $COUNTRY_ADJ$ people? Who does not recall the countless wars first fought over the Don, then the Dneiper, and then the Vistula? Who does not recall the days of November 1830, when the Pan-Slavist dream seemed to be lost forever?\n\n However, today, we have resurrected that dream—the dream of brotherly solidarity between all Slavs, from the Baltic to the Aegean. The Poles, once the most vocal opponents of Pan-Slavism, have now become its strongest supporters—it is rare to come across someone in the Congress Kingdom that does not carry the blue-white-red flag. The Polish Question has been resolved today, and no one in our two countries could be happier.\n §R NOTE: There will be no more Polish uprisings after this.§!;;;;;;;;;;;;;x
 EVTNAME500099;The Polish Question;;;;;;;;;;;;;x
 EVTOPTA500099;The Poles and Russians stand as brothers today!;;;;;;;;;;;;;x
