fixed some bugs with MP grants and added the hire general button and new very light green color for +1 att/def and deleted double loc for brazil and fixed some loc and improved image and added randomness generator

--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -67,7 +67,7 @@ EVTNAME65;Utility Options, 2/3;;;;;;;;;;;;;x
 EVTDESC65;\n§BReduce Global Population:§! Will do as it says, reducing the global population by 10%. Beware as this is permanent!\n\n§BVassal Tax Payment§!: Activate or Deactivates vassals paying tax to you.\n\n§BRequest a General§!: This will give a single free average general. You can have only one cheat general at a time.\n\n§BTech School Change Toggle§!: Shows decisions for Tech School Changing.;;;;;;;;;;;;;x
 EVTOPTA65;Reduce Global Population by 10%;;;;;;;;;;;;;x
 EVTOPTB65;Vassal Tax Payment;;;;;;;;;;;;;x
-EVTOPTC65;Request a General;;;;;;;;;;;;;x
+EVTOPTC65;Hire a General;;;;;;;;;;;;;x
 EVTOPTD65;See Tech School Change options (New decisions will appear in a day);;;;;;;;;;;;;x
 EVTNAME66;Utility Options, 3/3;;;;;;;;;;;;;x
 EVTDESC66;\n§BBorder Control options:§! Allow you to pick a different border policy, at a cost, your options are Open Borders, Quota Immigration or Closed Borders.\n\n§BRGO Change (Mining)§!: Allow you to change your Mining provinces into different mined goods.\n\n§BRGO Change (Farming)§!: Allow you to change your farming provinces into different farmed goods.;;;;;;;;;;;;;x
