--- a/TGC/localisation/00_military-traits.csv
+++ b/TGC/localisation/00_military-traits.csv
@@ -1,170 +1,170 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
 able;Able;Capable;Fähig;;;;;;;;;;;x
 active_p;Active;Actif;Aktiv;;;;;;;;;;;x
-adventurer;Adventurer §m+2 Attack;Aventurier;Abenteurer;;;;;;;;;;;x
-aggressive;Aggressive §W+1 Attack;Agressif;Aggressiv;;;;;;;;;;;x
-amateur;Amateur §R-1 Defence;Amateur;Amateur;;;;;;;;;;;x
+adventurer;Adventurer §M+2 Attack§!;Aventurier;Abenteurer;;;;;;;;;;;x
+aggressive;Aggressive §m+1 Attack§!;Agressif;Aggressiv;;;;;;;;;;;x
+amateur;Amateur §R-1 Defence§!;Amateur;Amateur;;;;;;;;;;;x
 aristocrat;Aristocrat;Aristocrate;Aristokrat;;;;;;;;;;;x
 armchair_general;Armchair General;Général de façade;Sesselgeneral;;;;;;;;;;;x
 arrogant;Arrogant;Arrogant;Arrogant;;;;;;;;;;;x
-artillerist;Artillerist §W+1 Defence;Artilleur;Artillerist;;;;;;;;;;;x
-au_fait;Au Fait §G+3 Attack;Au fait;Sicher;;;;;;;;;;;x
-audacious;Audacious §m+2 Attack §m+2 Defence;Audacieux;Kühn;;;;;;;;;;;x
+artillerist;Artillerist §m+1 Defence§!;Artilleur;Artillerist;;;;;;;;;;;x
+au_fait;Au Fait §G+3 Attack§!;Au fait;Sicher;;;;;;;;;;;x
+audacious;Audacious §M+2 Attack +2 Defence§!;Audacieux;Kühn;;;;;;;;;;;x
 aweless;Aweless;Casse-cou;Respektlos;;;;;;;;;;;x
-balanced_p;Balanced §W+1 Defence;Pondéré;Ausgewogen;;;;;;;;;;;x
+balanced_p;Balanced §m+1 Defence§!;Pondéré;Ausgewogen;;;;;;;;;;;x
 ballsy;Ballsy;Valeureux;Forsch;;;;;;;;;;;x
-bastard;Bastard §R-1 Defence;Goujat;Bastard;;;;;;;;;;;x
+bastard;Bastard §R-1 Defence§!;Goujat;Bastard;;;;;;;;;;;x
 bg_engineer;Engineer;;;;;;;;;;;;;x
 bigoted;Bigoted;Sectaire;Engstirnig;;;;;;;;;;;x
-bold;Bold §W+1 Attack;Téméraire;Mutig;;;;;;;;;;;x
-bootlicker;Bootlicker §W+1 Defence;Lèche-bottes;Speichellecker;;;;;;;;;;;x
-brash;Brash §W+1 Attack;Impudent;Forsch;;;;;;;;;;;x
+bold;Bold §m+1 Attack§!;Téméraire;Mutig;;;;;;;;;;;x
+bootlicker;Bootlicker §m+1 Defence§!;Lèche-bottes;Speichellecker;;;;;;;;;;;x
+brash;Brash §m+1 Attack§!;Impudent;Forsch;;;;;;;;;;;x
 brilliant;Brilliant;Brillant;Brilliant;;;;;;;;;;;x
-brownnoser;Brownnoser §W+1 Attack;Lèche-cul;Stiefellecker;;;;;;;;;;;x
-brutish;Brutish §W+1 Attack;Brutal;Brutal;;;;;;;;;;;x
+brownnoser;Brownnoser §m+1 Attack§!;Lèche-cul;Stiefellecker;;;;;;;;;;;x
+brutish;Brutish §m+1 Attack§!;Brutal;Brutal;;;;;;;;;;;x
 bureaucrat_speed;Bureaucrat Speed;Vitesse de bureaucrate;Bürokratische Geschwindigkeit;;;;;;;;;;;x
 butcher;Butcher;Boucher;Schlächter;;;;;;;;;;;x
-calm;Calm §R-1 Attack;Calme;Ruhig;;;;;;;;;;;x
+calm;Calm §R-1 Attack§!;Calme;Ruhig;;;;;;;;;;;x
 careful;Careful;Attentif;Sorgsam;;;;;;;;;;;x
 careless;Careless;Négligent;Achtlos;;;;;;;;;;;x
 cartographer;Cartographer;Cartographe;Kartograf;;;;;;;;;;;x
-cautious;Cautious §G+3 Defence;Prudent;Vorsichtig;;;;;;;;;;;x
-cavalry_school;Cavalry School §m+2 Attack;École de cavalerie;Kavallerieschule;;;;;;;;;;;x
+cautious;Cautious §G+3 Defence§!;Prudent;Vorsichtig;;;;;;;;;;;x
+cavalry_school;Cavalry School §M+2 Attack§!;École de cavalerie;Kavallerieschule;;;;;;;;;;;x
 charismatic;Charismatic;Charismatique;Charismatisch;;;;;;;;;;;x
-chickenhearted;Chickenhearted §R-2 Attack;Poltron;Ängstlich;;;;;;;;;;;x
-chivalrous;Chivalrous §m+2 Attack;Courtois;Ritterlich;;;;;;;;;;;x
-choleric;Choleric §W+1 Attack;Colérique;Cholerisch;;;;;;;;;;;x
+chickenhearted;Chickenhearted §R-2 Attack§!;Poltron;Ängstlich;;;;;;;;;;;x
+chivalrous;Chivalrous §M+2 Attack§!;Courtois;Ritterlich;;;;;;;;;;;x
+choleric;Choleric §m+1 Attack§!;Colérique;Cholerisch;;;;;;;;;;;x
 clever;Clever;Adroit;Clever;;;;;;;;;;;x
-clueless;Clueless §R-1 Defence;Ignorant;Ahnungslos;;;;;;;;;;;x
-colonial_trait;Colonial §R-2 Defence;Colonial;Kolonial;;;;;;;;;;;x
+clueless;Clueless §R-1 Defence§!;Ignorant;Ahnungslos;;;;;;;;;;;x
+colonial_trait;Colonial §R-2 Defence§!;Colonial;Kolonial;;;;;;;;;;;x
 competent;Competent;Compétent;Kompetent;;;;;;;;;;;x
 confident;Confident;Confiant;Sicher;;;;;;;;;;;x
-coolminded;Cool-minded §m+2 Defence;Serein;Bedachtsam;;;;;;;;;;;x
+coolminded;Cool-minded §M+2 Defence§!;Serein;Bedachtsam;;;;;;;;;;;x
 corrupt;Corrupt;Corrompu;Korrupt;;;;;;;;;;;x
 coward;Coward;Couard;Kleinmütig;;;;;;;;;;;x
 craven;Craven;Veule;Mutlos;;;;;;;;;;;x
-cursed_luck;Cursed Luck §m+2 Attack §m+2 Defence;Malchanceux;Vom Pech verflucht;;;;;;;;;;;x
-daring;Daring §G+3 Attack;Hardi;Draufgängerisch;;;;;;;;;;;x
+cursed_luck;Cursed Luck §M+2 Attack +2 Defence§!;Malchanceux;Vom Pech verflucht;;;;;;;;;;;x
+daring;Daring §G+3 Attack§!;Hardi;Draufgängerisch;;;;;;;;;;;x
 dauntless;Dauntless;Déterminé;Unverzagt;;;;;;;;;;;x
 debutante;Debutante;Débutant;Debütant;;;;;;;;;;;x
 decisive;Decisive;;;;;;;;;;;;;x
-deeply_religious;Deeply Religious §R-1 Attack -1 Defence;Très croyant;Tief religiös;;;;;;;;;;;x
-defiant;Defiant §G+3 Defence;Provocateur;Trotzig;;;;;;;;;;;x
+deeply_religious;Deeply Religious §R-1 Attack -1 Defence§!;Très croyant;Tief religiös;;;;;;;;;;;x
+defiant;Defiant §G+3 Defence§!;Provocateur;Trotzig;;;;;;;;;;;x
 diligent;Diligent;;;;;;;;;;;;;x
 diplomat;Diplomat;Diplomate;Diplomat;;;;;;;;;;;x
 diplomatic;Diplomatic;Diplomate;Diplomatisch;;;;;;;;;;;x
-disciplined;Disciplined §m+2 Attack;Discipliné;Diszipliniert;;;;;;;;;;;x
+disciplined;Disciplined §M+2 Attack§!;Discipliné;Diszipliniert;;;;;;;;;;;x
 disgraced;Disgraced;Déshonoré;In Ungnade Gefallener;;;;;;;;;;;x
 disorderly;Disorderly;Désordonné;Unordentlich;;;;;;;;;;;x
 doughty;Doughty;Vaillant;Tapfer;;;;;;;;;;;x
 drillmaster;Drillmaster;Sergent instructeur;Zuchtmeister;;;;;;;;;;;x
 earnest;Earnest;Sérieux;Ernsthaft;;;;;;;;;;;x
-eccentric_genius;Eccentric Genius §m+2 Attack;Génie excentrique;Exzentrisches Genie;;;;;;;;;;;x
-efficient;Efficient §m+2 Attack;Efficace;Effizient;;;;;;;;;;;x
+eccentric_genius;Eccentric Genius §M+2 Attack§!;Génie excentrique;Exzentrisches Genie;;;;;;;;;;;x
+efficient;Efficient §M+2 Attack§!;Efficace;Effizient;;;;;;;;;;;x
 elderly;Elderly;Âgé;Älter;;;;;;;;;;;x
 expert;Expert;Expert;Experte;;;;;;;;;;;x
-expert_raider;Expert Raider §m+2 Attack;Commando expérimenté;Überfallexperte;;;;;;;;;;;x
+expert_raider;Expert Raider §M+2 Attack§!;Commando expérimenté;Überfallexperte;;;;;;;;;;;x
 exranker;Ex-ranker;Ancien militaire;Ex-Gefreiter;;;;;;;;;;;x
 fanatic;Fanatic;Fanatique;Fanatisch;;;;;;;;;;;x
 gallant;Gallant;Courageux;Galant;;;;;;;;;;;x
-generals_aide;General’s Aide §W+1 Defence;Aide de camp;Generalsadjutant;;;;;;;;;;;x
+generals_aide;General’s Aide §m+1 Defence§!;Aide de camp;Generalsadjutant;;;;;;;;;;;x
 gifted_administrator;Gifted Administrator;Administrateur doué;Begabter Administrator;;;;;;;;;;;x
 glory_hound;Glory Hound;Ambitieux;Ruhmsüchtig;;;;;;;;;;;x
-gutsy;Gutsy §W+1 Defence;Brave;Waghalsig;;;;;;;;;;;x
-harsh;Harsh §W+1 Attack§! §W+1 Defence;Dur;Harsch;;;;;;;;;;;x
-hated;Hated§W+1 Attack§! §W+1 Defence;Odieux;Gehasst;;;;;;;;;;;x
+gutsy;Gutsy §m+1 Defence§!;Brave;Waghalsig;;;;;;;;;;;x
+harsh;Harsh §m+1 Attack +1 Defence§!;Dur;Harsch;;;;;;;;;;;x
+hated;Hated§m+1 Attack +1 Defence§!;Odieux;Gehasst;;;;;;;;;;;x
 hellbent;Hellbent;Acharné;Draufgänger;;;;;;;;;;;x
 heroic;Heroic;Héroïque;Heroisch;;;;;;;;;;;x
 immoral;Immoral;Immoral;Unmoralisch;;;;;;;;;;;x
-imperious;Imperious §W+1 Attack §R-2 Defence;Autoritaire;Herrisch;;;;;;;;;;;x
-impetuous;Impetuous §R-2 Defence;Impétueux;Ungestüm;;;;;;;;;;;x
-implacable;Implacable §G+3 Attack§! §G+3 Defence;Implacable;Unerbittlich;;;;;;;;;;;x
+imperious;Imperious §m+1 Attack §R-2 Defence§!;Autoritaire;Herrisch;;;;;;;;;;;x
+impetuous;Impetuous §R-2 Defence§!;Impétueux;Ungestüm;;;;;;;;;;;x
+implacable;Implacable §G+3 Attack§! §G+3 Defence§!;Implacable;Unerbittlich;;;;;;;;;;;x
 impulsive;Impulsive;Impulsif;Impulsiv;;;;;;;;;;;x
 incapable;Incapable;Incapable;Unfähig;;;;;;;;;;;x
 incompetent;Incompetent;Incompétent;Inkompetent;;;;;;;;;;;x
 indifferent;Indifferent;Indifférent;Gleichgültig;;;;;;;;;;;x
-inefficient;Inefficient §R-2 Attack;Inefficace;Ineffizient;;;;;;;;;;;x
-inept;Inept §R-1 Attack;Inepte;Untauglich;;;;;;;;;;;x
-innovative_tactician;Innovative Tactician §W+1 Attack;Tacticien novateur;Innovativer Taktiker;;;;;;;;;;;x
+inefficient;Inefficient §R-2 Attack§!;Inefficace;Ineffizient;;;;;;;;;;;x
+inept;Inept §R-1 Attack§!;Inepte;Untauglich;;;;;;;;;;;x
+innovative_tactician;Innovative Tactician §m+1 Attack§!;Tacticien novateur;Innovativer Taktiker;;;;;;;;;;;x
 inspiring;Inspiring;Stimulant;Inspirierend;;;;;;;;;;;x
 intelligent;Intelligent;Intelligent;Intelligent;;;;;;;;;;;x
 intuitive;Intuitive;Intuitif;Intuitiv;;;;;;;;;;;x
-irate;Irate §W+1 Attack;Furieux;Aufbrausend;;;;;;;;;;;x
+irate;Irate §m+1 Attack§!;Furieux;Aufbrausend;;;;;;;;;;;x
 keen;Keen;Enthousiaste;Gewitzt;;;;;;;;;;;x
 lackluster;Lacklustre;Terne;Lustlos;;;;;;;;;;;x
-lilylivered;Lily-livered §R-2 Attack;Froussard;Feige;;;;;;;;;;;x
+lilylivered;Lily-livered §R-2 Attack§!;Froussard;Feige;;;;;;;;;;;x
 madman;Madman;Fou;Irrer;;;;;;;;;;;x
 maladroit;Maladroit;Maladroit;Unbeholfen;;;;;;;;;;;x
 manful;Manful;Ardent;Männlich;;;;;;;;;;;x
 mediocre;Mediocre;Médiocre;Mittelmäßig;;;;;;;;;;;x
-megalomaniac;Megalomaniac §R-2 Attack;Mégalomane;Megalomane;;;;;;;;;;;x
-merciless;Merciless §m+2 Attack §m+2 Defence;Impitoyable;Gnadenlos;;;;;;;;;;;x
-meticulous;Meticulous §W+1 Attack;Méticuleux;Genau;;;;;;;;;;;x
-nationalist;Nationalist §W+1 Attack;;;;;;;;;;;;;x
-natural_born_leader;Natural Born Leader §W+1 Attack;Leader naturel;Geborener Anführer;;;;;;;;;;;x
-no_background;§R-2 Attack §R-2 Defence;No Background;Aucun(e);Nichts;;;;;;;;;;;x
+megalomaniac;Megalomaniac §R-2 Attack§!;Mégalomane;Megalomane;;;;;;;;;;;x
+merciless;Merciless §M+2 Attack +2 Defence§!;Impitoyable;Gnadenlos;;;;;;;;;;;x
+meticulous;Meticulous §m+1 Attack§!;Méticuleux;Genau;;;;;;;;;;;x
+nationalist;Nationalist §m+1 Attack§!;;;;;;;;;;;;;x
+natural_born_leader;Natural Born Leader §m+1 Attack§!;Leader naturel;Geborener Anführer;;;;;;;;;;;x
+no_background;No Background §R-2 Attack -2 Defence§!;No Background;Aucun(e);Nichts;;;;;;;;;;;x
 no_personality;No Personality;Aucune;Nichts;;;;;;;;;;;x
-old_school;Old School §W+1 Attack §R-2 Defence;Vieille école;Alte Schule;;;;;;;;;;;x
+old_school;Old School §m+1 Attack §R-2 Defence§!;Vieille école;Alte Schule;;;;;;;;;;;x
 openminded;Openminded;Ouvert d'esprit;Offen;;;;;;;;;;;x
 pawn;Pawn;Pion;Pfand;;;;;;;;;;;x
 persistant;Persistent;Persévérant;Hartnäckig;;;;;;;;;;;x
 perverse;Perverse;Entêté;Pervers;;;;;;;;;;;x
 pessimist;Pessimist;;;;;;;;;;;;;x
-pisspoor;Piss-poor §R-2 Attack;Pitoyable;Arm;;;;;;;;;;;x
-poet;Poet §R-1 Attack;Poète;Poet;;;;;;;;;;;x
+pisspoor;Piss-poor §R-2 Attack§!;Pitoyable;Arm;;;;;;;;;;;x
+poet;Poet §R-1 Attack§!;Poète;Poet;;;;;;;;;;;x
 polite;Polite;Poli;Höflich;;;;;;;;;;;x
 politician;Politician;Politicien;Politiker;;;;;;;;;;;x
 powerful_friends;Powerful Friends;Amis puissants;Mächtige Freunde;;;;;;;;;;;x
 priest;Priest;Prêtre;Priester;;;;;;;;;;;x
-professor;Professor §R-1 Attack §R-2 Defence;Professeur;Professor;;;;;;;;;;;x
+professor;Professor §R-1 Attack -2 Defence§!;Professeur;Professor;;;;;;;;;;;x
 pusillanimous;Pusillanimous;Pusillanime;Verzagt;;;;;;;;;;;x
-relentless;Relentless §m+2 Attack;Implacable;Unbarmherzig;;;;;;;;;;;x
-reserved;Reserved §R-1 Attack;Réservé;Reserviert;;;;;;;;;;;x
-resolute;Resolute §m+2 Defence;Résolu;Resolut;;;;;;;;;;;x
-resourceful;Resourceful§R-1 Defence;Ingénieux;Findig;;;;;;;;;;;x
+relentless;Relentless §M+2 Attack§!;Implacable;Unbarmherzig;;;;;;;;;;;x
+reserved;Reserved §R-1 Attack§!;Réservé;Reserviert;;;;;;;;;;;x
+resolute;Resolute §M+2 Defence§!;Résolu;Resolut;;;;;;;;;;;x
+resourceful;Resourceful§R-1 Defence§!;Ingénieux;Findig;;;;;;;;;;;x
 rising_star;Rising Star;Étoile montante;Aufsteigender Stern;;;;;;;;;;;x
 romantic;Romantic;Romantique;Romantisch;;;;;;;;;;;x
-sad_sack;Sad Sack§R-2 Attack;Raté;Trauriger Sack;;;;;;;;;;;x
-scared;Scared §R-1 Defence;Craintif;Verängstigt;;;;;;;;;;;x
-school_of_defense;School of Defence §G+3 Defence;École de défense;Schule der Verteidigung;;;;;;;;;;;x
-school_of_firepower;School of Firepower §W+1 Attack;École de la puissance de feu;Schule der Feuerkraft;;Escuela de la potencia de fuego;;;;;;;;;x
-school_of_offense;School of Offense §W+1 Attack;École d'attaque;Schule der Offensive;;;;;;;;;;;x
-school_of_the_bayonet;School of the Bayonet §m+2 Attack §W+1 Defence;École de la baïonnette;Schule des Bajonetts;;;;;;;;;;;x
+sad_sack;Sad Sack §R-2 Attack§!;Raté;Trauriger Sack;;;;;;;;;;;x
+scared;Scared §R-1 Defence§!;Craintif;Verängstigt;;;;;;;;;;;x
+school_of_defense;School of Defence §G+3 Defence§!;École de défense;Schule der Verteidigung;;;;;;;;;;;x
+school_of_firepower;School of Firepower §m+1 Attack§!;École de la puissance de feu;Schule der Feuerkraft;;Escuela de la potencia de fuego;;;;;;;;;x
+school_of_offense;School of Offense §m+1 Attack;§!École d'attaque;Schule der Offensive;;;;;;;;;;;x
+school_of_the_bayonet;School of the Bayonet §M+2 Attack §m+1 Defence§!;École de la baïonnette;Schule des Bajonetts;;;;;;;;;;;x
 secretive;Secretive;;;;;;;;;;;;;x
 sharp;Sharp;Malin;Klug;;;;;;;;;;;x
-shirker;Shirker §R-1 Defence;Tire-au-flanc;Drückeberger;;;;;;;;;;;x
+shirker;Shirker §R-1 Defence§!;Tire-au-flanc;Drückeberger;;;;;;;;;;;x
 shrinking_violet;Shrinking Violet;Timoré;Mauerblümchen;;;;;;;;;;;x
-skilled;Skilled §W+1 Attack;Talentueux;Geschickt;;;;;;;;;;;x
+skilled;Skilled §m+1 Attack§!;Talentueux;Geschickt;;;;;;;;;;;x
 smart_p;Smart;Habile;Schlau;;;;;;;;;;;x
-soft;Soft §R-2 Attack;Indolent;Weich;;;;;;;;;;;x
-soldierly;Soldierly §W+1 Attack;Militaire;Soldatisch;;;;;;;;;;;x
-spineless;Spineless §R-2 Attack;Mou;Rückgratlos;;;;;;;;;;;x
-spirited;Spirited §m+2 Defence;Fougueux;Sprühend;;;;;;;;;;;x
-spoiled;Spoiled §m+2 Attack;Gâté;Verwöhnt;;;;;;;;;;;x
-stalwart;Stalwart §W+1 Attack§! §W+1 Defence;Robuste;Robust;;;;;;;;;;;x
-steadfast;Steadfast §m+2 Attack;Inébranlable;Solide;;;;;;;;;;;x
-stout;Stout §W+1 Defence;Solide;Beherzt;;;;;;;;;;;x
-stouthearted;Stout-hearted §W+1 Attack;Intrépide;Beherzt;;;;;;;;;;;x
+soft;Soft §R-2 Attack§!;Indolent;Weich;;;;;;;;;;;x
+soldierly;Soldierly §m+1 Attack§!;Militaire;Soldatisch;;;;;;;;;;;x
+spineless;Spineless §R-2 Attack§!;Mou;Rückgratlos;;;;;;;;;;;x
+spirited;Spirited §M+2 Defence§!;Fougueux;Sprühend;;;;;;;;;;;x
+spoiled;Spoiled §M+2 Attack§!;Gâté;Verwöhnt;;;;;;;;;;;x
+stalwart;Stalwart §m+1 Attack +1 Defence§!;Robuste;Robust;;;;;;;;;;;x
+steadfast;Steadfast §M+2 Attack§!;Inébranlable;Solide;;;;;;;;;;;x
+stout;Stout §m+1 Defence§!;Solide;Beherzt;;;;;;;;;;;x
+stouthearted;Stout-hearted §m+1 Attack§!;Intrépide;Beherzt;;;;;;;;;;;x
 strange;Strange;Étrange;Merkwürdig;;;;;;;;;;;x
-sucker;Sucker§R-1 Attack;Gogo;Trottel;;;;;;;;;;;x
+sucker;Sucker §R-1 Attack§!;Gogo;Trottel;;;;;;;;;;;x
 sycophant;Sycophant;Flagorneur;Kriecher;;;;;;;;;;;x
 tactful;Tactful;Délicat;Taktvoll;;;;;;;;;;;x
-timid;Timid §R-1 Attack;Timide;Furchtsam;;;;;;;;;;;x
-toady;Toady §W+1 Attack;Flatteur;Schleimer;;;;;;;;;;;x
-uncommonly_young;Uncommonly Young §W+1 Attack§! §W+1 Defence;Singulièrement jeune;Ungewöhnlich jung;;;;;;;;;;;x
+timid;Timid §R-1 Attack§!;Timide;Furchtsam;;;;;;;;;;;x
+toady;Toady §m+1 Attack§!;Flatteur;Schleimer;;;;;;;;;;;x
+uncommonly_young;Uncommonly Young §m+1 Attack +1 Defence§!;Singulièrement jeune;Ungewöhnlich jung;;;;;;;;;;;x
 undisciplined;Undisciplined;Indiscipliné;Undiszipliniert;;;;;;;;;;;x
-unfit;Unfit§R-2 Attack;Inapte;Ungeeignet;;;;;;;;;;;x
-unflinching;Unflinching §G+3 Attack;Opiniâtre;Entschlossen;;;;;;;;;;;x
-unmanly;Unmanly §R-4 Attack;Lâche;Unmännlich;;;;;;;;;;;x
+unfit;Unfit §R-2 Attack§!;Inapte;Ungeeignet;;;;;;;;;;;x
+unflinching;Unflinching §G+3 Attack§!;Opiniâtre;Entschlossen;;;;;;;;;;;x
+unmanly;Unmanly §R-4 Attack§!;Lâche;Unmännlich;;;;;;;;;;;x
 unqualified;Unqualified;Non qualifié;Unqualifiziert;;;;;;;;;;;x
 unruly;Unruly;Insoumis;Widerborstig;;;;;;;;;;;x
 unsound;Unsound;Dangereux;Unzuverlässig;;;;;;;;;;;x
 vainglorious;Vainglorious;Vaniteux;Prahlerisch;;;;;;;;;;;x
-vicious;Vicious §m+2 Attack;Violent;Bösartig;;;;;;;;;;;x
-war_college;War College §W+1 Attack;École militaire;Militärakademie;;;;;;;;;;;x
+vicious;Vicious §M+2 Attack§!;Violent;Bösartig;;;;;;;;;;;x
+war_college;War College §m+1 Attack§!;École militaire;Militärakademie;;;;;;;;;;;x
 warmonger;Warmonger;Belliciste;Kriegstreiber;;;;;;;;;;;x
 womanizer;Womanizer;Coureur de jupons;Schürzenjäger;;;;;;;;;;;x
-wrathful;Wrathful §m+2 Attack;Courroucé;Zornerfüllt;;;;;;;;;;;x
-wretched;Wretched §R-1 Attack;Misérable;Jämmerlich;;;;;;;;;;;x
-yellow;Yellow §R-4 Attack;Trouillard;Memme;;;;;;;;;;;x
+wrathful;Wrathful §M+2 Attack§!;Courroucé;Zornerfüllt;;;;;;;;;;;x
+wretched;Wretched §R-1 Attack§!;Misérable;Jämmerlich;;;;;;;;;;;x
+yellow;Yellow §R-4 Attack§!;Trouillard;Memme;;;;;;;;;;;x
 yesman;Yes-man;Béni-oui-oui;Jasager;;;;;;;;;;;x
