--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -74,3 +74,8 @@ renaming_half_y;Renamings will happen every §G6 months§!.§b;;;;;;;;;;;;x
 renaming_1_y;Renamings will happen §Gonce a year§!.§b;;;;;;;;;;;;x
 renaming_2_y;Renamings will happen every §G2 years§!.§b;;;;;;;;;;;;x
 renaming_5_y;Renamings will happen every §G5 years§!.§b;;;;;;;;;;;;x
+hire_general_attack_0;We will look for generals with +0 attack...                         §RThis will cost us between ¤5,000 and ¤500,000!§b;;;;;;;;;;;;x
+hire_general_attack_1;We will look for generals with +1 attack...                         §RThis will cost us between ¤10,000 and ¤1,000,000!§b;;;;;;;;;;;;x
+hire_general_attack_2;We will look for generals with +2 attack...                         §RThis will cost us between ¤50,000 and ¤2,000,000!§b;;;;;;;;;;;;
+hire_general_attack_3;We will look for generals with +3 attack...                         §RThis will cost us between ¤250,000 and ¤5,000,000!§b;;;;;;;;;;;;x
+hire_general_gacha;We will spin the wheel of §Rgacha§! and take what we get, before then wasting all of our life savings in the vain hope to get a 5 star...                                                                  §RThis will cost us ¤1,000,000 per roll!§b;;;;;;;;;;;;x
